# ros2_cr5_sim_ws

./: README.md  command
install/: local_setup.sh  setup.sh
install/cpp_general_pkg/lib/cpp_general_pkg/: simple_client_node  simple_node  simple_publisher_node  simple_server_node  simple_subscriber_node
install/cpp_general_pkg/share/cpp_general_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/cpp_general_pkg/share/cpp_general_pkg/cmake/: cpp_general_pkgConfig.cmake
install/python_general_pkg/lib/python_general_pkg/: simple_client_node  simple_node  simple_publisher_node  simple_server_node  simple_subscriber_node
install/python_general_pkg/share/python_general_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/cpp_general_pkg/: CMakeLists.txt
src/cpp_general_pkg/src/: simple_client_node.cpp  simple_node.cpp  simple_publisher_node.cpp  simple_server_node.cpp  simple_subscriber_node.cpp
src/python_general_pkg/: package.xml  setup.cfg  setup.py
src/python_general_pkg/launch/: simple_subscriber_or_server.launch.py
src/python_general_pkg/python_general_pkg/: simple_publisher_node.py  simple_server_node.py  simple_subscriber_node.py
urdf/CR5URDF/: CR5URDF.usd
urdf/cup/: cup.usd
urdf/plane/configuration/: plane_physics.usd
urdf/table/configuration/: table_physics.usd
